samples/_failures_safe/1761005848_b55dcc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b40eb41c.c:171:1: error: expected identifier or ‘(’ at end of input
  171 | const
      | ^~~~~
